# guardrail-calibration-eval

./: config.yaml  pyproject.toml
.hypothesis/constants/: 0f669f8f2a3fb8a3  3efed63706977643  499b57c680d77726  4e5ce3acce7018f0  570e8f6c55b87867  5e39f23913ca4e34  6dfa5395d508b7f7  747666d5e44fcee6  778ae9d449f0cb2b  7f2754c66ab65894  820839909b4d7f31  9d965b35c6a96b17  aa4b98718cf75ea1  aa66a95478a70b14  b04138339d88b6b7  b54dc103918c138e  b83f75477a9d626a  b9f06232eb60641e  ba845d49d6a7bccd  bd9dc20b86f05a46  be417912232fe4e7  ce3e4f6a498fe1f7  da39a3ee5e6b4b0d  ee54a470f8b009df  f621361a7b725405
.hypothesis/examples/04e6b3400353b141/: 1936ed97b4f3139f  38b4ac58e1b0d55b  3e45b46cd0d2fe49
.hypothesis/examples/1936ed97b4f3139f/: 4f26899c685d7772
.hypothesis/examples/38b4ac58e1b0d55b/: 206de5cc3128782e  ad3592febdbee08a  dedce24510be643f  fd95b0e3329f8e45
.kiro/: MAC_STUDIO_SETUP.md  OLLAMA_INTEGRATION_SUMMARY.md
src/: main.py  models.py
src/analysis/: plots.py
src/datasets/: builder.py  validator.py
src/evaluation/: bootstrap.py  calibration.py  posthoc.py  runner.py  thresholds.py
src/guardrails/: base.py  granite.py  llamaguard.py  nemoguard.py  openai_moderation.py  qwen3guard.py  shieldgemma.py  wildguard.py
src/utils/: ollama_client.py  reproducibility.py
tests/integration/: test_end_to_end.py
tests/property/: test_adapters.py  test_bootstrap.py  test_calibration.py  test_dataset_builder.py  test_models.py  test_plots.py  test_posthoc.py  test_runner.py  test_validation_pipeline.py
tests/unit/: test_local_adapters.py  test_openai_adapter.py
(+5 files in other folders)
